trunk/Archive2/23/5a61525cd258a4/output
main.cpp:6:50: error: a storage class can only be specified for objects and functions
      static enum Items{ desk = 0, chair, monitor };
                                                  ^
main.cpp: In function 'int main()':
main.cpp:12:11: warning: unused variable 'e' [-Wunused-variable]
   Example e;
           ^
